--- a/package.json
+++ b/package.json
@@ -47,9 +47,15 @@
   "devDependencies": {
     "@size-limit/preset-small-lib": "^4.9.1",
     "husky": "^4.3.8",
+    "prettier": "^2.2.1",
     "size-limit": "^4.9.1",
     "tsdx": "^0.14.1",
     "tslib": "^2.1.0",
     "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "@changesets/types": "^3.2.0",
+    "@gitbeaker/node": "^28.0.2",
+    "dotenv": "^8.2.0"
   }
 }
